เสร็จ ไว้กลับมาดูส่วนเทส และ สามารถการดีไซน์คลาสให้ดีขึ้นได้